--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Solar System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hệ mặt trời</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Tí học Toán">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="icon.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- Kết nối style.css -->
   <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body class="opening hide-UI view-2D zoom-large data-close controls-close">
 
   <div id="navbar">
