--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   </div>
 
   <div id="data">
-    <a class="sun" title="sun" href="#sunspeed">Sun</a>
-    <a class="mercury" title="mercury" href="#mercuryspeed">Mercury</a>
-    <a class="venus" title="venus" href="#venusspeed">Venus</a>
-    <a class="earth active" title="earth" href="#earthspeed">Earth</a>
-    <a class="mars" title="mars" href="#marsspeed">Mars</a>
-    <a class="jupiter" title="jupiter" href="#jupiterspeed">Jupiter</a>
-    <a class="saturn" title="saturn" href="#saturnspeed">Saturn</a>
-    <a class="uranus" title="uranus" href="#uranusspeed">Uranus</a>
-    <a class="neptune" title="neptune" href="#neptunespeed">Neptune</a>
+    <a class="sun" title="Mặt Trời" href="#sunspeed">Sun</a>
+    <a class="mercury" title="Sao Thủy" href="#mercuryspeed">Mercury</a>
+    <a class="venus" title="Sao Kim" href="#venusspeed">Venus</a>
+    <a class="earth active" title="Trái Đất" href="#earthspeed">Earth</a>
+    <a class="mars" title="Sao Hỏa" href="#marsspeed">Mars</a>
+    <a class="jupiter" title="Sao Mộc" href="#jupiterspeed">Jupiter</a>
+    <a class="saturn" title="Sao Thổ" href="#saturnspeed">Saturn</a>
+    <a class="uranus" title="Sao Thiên Vương" href="#uranusspeed">Uranus</a>
+    <a class="neptune" title="Sao Hải Vương" href="#neptunespeed">Neptune</a>
   </div>
 
   <div id="controls">
