--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 <body class="opening hide-UI view-2D zoom-large data-close controls-close">
 
   <div id="navbar">
-    <a id="toggle-data" href="#data"><i class="icon-data"></i>Data</a>
-    <h1>3D Solar System<br><span>by <a href="https://twitter.com/JulianGarnier" target="_blank">@JulianGarnier</a></span></h1>
-    <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
+    <a id="toggle-data" href="#data"><i class="icon-data"></i>Dữ liệu</a>
+    <h1>Hệ Mặt Trời 3D</h1>
+    <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Điều khiển</a>
   </div>
 
   <div id="data">
-    <a class="sun" title="Mặt Trời" href="#sunspeed">Sun</a>
-    <a class="mercury" title="Sao Thủy" href="#mercuryspeed">Mercury</a>
-    <a class="venus" title="Sao Kim" href="#venusspeed">Venus</a>
-    <a class="earth active" title="Trái Đất" href="#earthspeed">Earth</a>
-    <a class="mars" title="Sao Hỏa" href="#marsspeed">Mars</a>
-    <a class="jupiter" title="Sao Mộc" href="#jupiterspeed">Jupiter</a>
-    <a class="saturn" title="Sao Thổ" href="#saturnspeed">Saturn</a>
-    <a class="uranus" title="Sao Thiên Vương" href="#uranusspeed">Uranus</a>
-    <a class="neptune" title="Sao Hải Vương" href="#neptunespeed">Neptune</a>
+    <a class="sun" title="Mặt Trời" href="#sunspeed">Mặt Trời</a>
+    <a class="mercury" title="Sao Thủy" href="#mercuryspeed">Sao Thủy</a>
+    <a class="venus" title="Sao Kim" href="#venusspeed">Sao Kim</a>
+    <a class="earth active" title="Trái Đất" href="#earthspeed">Trái Đất</a>
+    <a class="mars" title="Sao Hỏa" href="#marsspeed">Sao Hỏa</a>
+    <a class="jupiter" title="Sao Mộc" href="#jupiterspeed">Sao Mộc</a>
+    <a class="saturn" title="Sao Thổ" href="#saturnspeed">Sao Thổ</a>
+    <a class="uranus" title="Sao Thiên Vương" href="#uranusspeed">Sao Thiên Vương</a>
+    <a class="neptune" title="Sao Hải Vương" href="#neptunespeed">Sao Hải Vương</a>
   </div>
 
   <div id="controls">
@@ -43,16 +43,20 @@
       <input type="checkbox">
     </label>
     <label>
-      <input type="radio" class="set-speed" name="scale" checked>
-      <span>Speed</span>
+      <input type="radio" class="set-none" name="scale" checked>
+      <span>Không hiển thị</span>
+    </label>
+    <label>
+      <input type="radio" class="set-speed" name="scale">
+      <span>Tốc độ</span>
     </label>
     <label>
       <input type="radio" class="set-size" name="scale">
-      <span>Size</span>
+      <span>Kích thước</span>
     </label>
     <label>
       <input type="radio" class="set-distance" name="scale">
-      <span>Distance</span>
+      <span>Khoảng cách</span>
     </label>
   </div>
 
@@ -63,7 +67,7 @@
         <div id="mercury" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Mercury</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Thủy</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -71,7 +75,7 @@
         <div id="venus" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Venus</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Kim</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -82,7 +86,7 @@
               <div class="pos"><div class="moon"></div></div>
             </div>
             <div class="planet">
-              <dl class="infos"><dt>Earth</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Trái Đất</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -90,7 +94,7 @@
         <div id="mars" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Mars</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Hỏa</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -98,7 +102,7 @@
         <div id="jupiter" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Jupiter</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Mộc</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -107,7 +111,7 @@
           <div class="pos">
             <div class="planet">
               <div class="ring"></div>
-              <dl class="infos"><dt>Saturn</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Thổ</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -115,7 +119,7 @@
         <div id="uranus" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Uranus</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Thiên Vương</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
@@ -123,13 +127,13 @@
         <div id="neptune" class="orbit">
           <div class="pos">
             <div class="planet">
-              <dl class="infos"><dt>Neptune</dt><dd><span></span></dd></dl>
+              <dl class="infos"><dt>Sao Hải Vương</dt><dd><span></span></dd></dl>
             </div>
           </div>
         </div>
 
         <div id="sun">
-          <dl class="infos"><dt>Sun</dt><dd><span></span></dd></dl>
+          <dl class="infos"><dt>Mặt Trời</dt><dd><span></span></dd></dl>
         </div>
 
       </div>
@@ -138,18 +142,15 @@
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-  <!-- Fallback nếu CDN bị chặn -->
   <script>
     if (typeof jQuery === 'undefined') {
       document.write('<script src="js/jquery.min.js"><\/script>');
     }
   </script>
 
-  <!-- prefixfree để tự động thêm prefix CSS -->
   <script src="js/prefixfree.min.js"></script>
-
-  <!-- script chính -->
   <script src="script.js"></script>
 
 </body>
+
 </html>
