--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <button id="rotate-toggle">🔄 Xoay</button>
+  <!-- <button id="rotate-toggle">🔄 Xoay</button> -->
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
