--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hệ mặt trời</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Tí học Toán">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="icon.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Kết nối style.css -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
 
 <body class="opening hide-UI view-2D zoom-large data-close controls-close">
@@ -125,8 +139,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <button id="rotate-toggle">🔄 Xoay</button> -->
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
